# coverdec

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json
docs/: FABRICA.xlsx  PRODUCCION.xlsx  PromptMaestro.html  Proyecto.md  architecture.md  deploy.md  planning_S19_2026.html  user-guide.md
prisma/: schema.prisma  seed.ts
prisma/migrations/20260512085359_init/: migration.sql
prisma/migrations/20260514103000_planning_policy/: migration.sql
public/: sw.js
scripts/: import-excels.ts  inspect-rows.ts  inspect-xlsx.ts  test-planning.ts
services/planning-solver/: Dockerfile  pyproject.toml  requirements.txt
services/planning-solver/app/: __init__.py  main.py  schemas.py
services/planning-solver/app/model/: __init__.py  candidates.py  solve_week.py  timeline.py
services/planning-solver/tests/: conftest.py  test_plan_from_and_earliness.py  test_solve_week.py  test_weight_mapping.py
src/: instrumentation-client.ts  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/components/: dry-wait-badge.tsx  person-avatar.tsx  process-badge.tsx  risk-badge.tsx  task-lamp-bastidor.tsx  task-progress-tooltip-context.tsx  task-progress.tsx  week-progress-bar.tsx
src/components/ui/: dialog.tsx  (+3 more)
src/lib/: auth-client.ts  auth-server.ts  auth.ts  color.ts  context.ts  dashboard-path.ts  datetime-local.ts  db.ts  format.ts  holidays.ts  logger.ts  nave-filter.ts  week.ts
src/types/: process.ts
src/worker/: notifications.ts
(+212 files in other folders)
